# labyrinth-cg-2025.1

./: .gitignore  CMakeLists.txt  COMO_COMPILAR  README.md  readme.txt
include/glad/: glad.h
models/: lab_com_baús.mtl
models/MODELOS/Maze/: maze.blend1  maze.mtl
models/MODELOS/Portal/: PuertaDeLaLuna.blend  PuertaDeLaLuna.mtl
shaders/: debug.frag  shader.frag  shader.vert  text.vert
src/: Game.cpp  Game.h  Shader.cpp  Shader.h  TextRenderer.cpp  TextRenderer.h  glad.c  main.cpp  tiny_obj_loader.h
